# ProjektPK2

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
include/Filter/: App.h  BufferedFileReader.h  Filter.h  ParseArgs.h  PrefixList.h  PrefixTree.h  String.h
src/: App.c  BufferedFileReader.c  Filter.c  Main.c  ParseArgs.c  PrefixList.c  PrefixTree.c  String.c
test_data/: input.txt  prefixes.txt
